--- a/src/style.css
+++ b/src/style.css
@@ -1,175 +1,324 @@
+/** @format */
+body {
+	box-sizing: border-box;
+	background-color: rgb(246, 244, 244);
+}
+
 .container {
-  position: relative;
+	position: relative;
 }
 
 .selectEl {
-  display: flex;
-  gap: 40px;
-  width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
+	display: flex;
+	gap: 40px;
+	width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
 }
 
 .ss-main {
-  height: 45px;
+	height: 45px;
 }
 
 .showcase {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100px;
-    height: 100px;
-    padding: 10px;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%);
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100px;
+	height: 100px;
+	padding: 10px;
+	top: 0;
+	left: 50%;
+	transform: translate(-50%);
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .loader_cat {
-    color: blue;
-    font-size: 10px;
-    width: 1em;
-    height: 1em;
-    border-radius: 50%;
-    position: relative;
-    top: 60px;
-    text-indent: -9999em;
-    animation: mulShdSpin 1.3s infinite linear;
-    transform: translateZ(0);
-  }
-  
-  @keyframes mulShdSpin {
-    0%,
-    100% {
-      box-shadow: 0 -3em 0 0.2em, 
-      2em -2em 0 0em, 3em 0 0 -1em, 
-      2em 2em 0 -1em, 0 3em 0 -1em, 
-      -2em 2em 0 -1em, -3em 0 0 -1em, 
-      -2em -2em 0 0;
-    }
-    12.5% {
-      box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em, 
-      3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em, 
-      -2em 2em 0 -1em, -3em 0 0 -1em, 
-      -2em -2em 0 -1em;
-    }
-    25% {
-      box-shadow: 0 -3em 0 -0.5em, 
-      2em -2em 0 0, 3em 0 0 0.2em, 
-      2em 2em 0 0, 0 3em 0 -1em, 
-      -2em 2em 0 -1em, -3em 0 0 -1em, 
-      -2em -2em 0 -1em;
-    }
-    37.5% {
-      box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-       3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em, 
-       -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
-    }
-    50% {
-      box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-       3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em, 
-       -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
-    }
-    62.5% {
-      box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-       3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0, 
-       -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
-    }
-    75% {
-      box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em, 
-      3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, 
-      -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
-    }
-    87.5% {
-      box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 
-      3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, 
-      -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
-    }
-  }
+	color: blue;
+	font-size: 10px;
+	width: 1em;
+	height: 1em;
+	border-radius: 50%;
+	position: relative;
+	top: 60px;
+	text-indent: -9999em;
+	animation: mulShdSpin 1.3s infinite linear;
+	transform: translateZ(0);
+}
 
-  .loader, .loader:before, .loader:after {
-    border-radius: 50%;
-    width: 2.5em;
-    height: 2.5em;
-    animation-fill-mode: both;
-    animation: bblFadInOut 1.8s infinite ease-in-out;
-  }
+@keyframes mulShdSpin {
+	0%,
+	100% {
+		box-shadow: 0 -3em 0 0.2em, 2em -2em 0 0em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+			-2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 0;
+	}
+	12.5% {
+		box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em, 3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em,
+			-2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
+	}
+	25% {
+		box-shadow: 0 -3em 0 -0.5em, 2em -2em 0 0, 3em 0 0 0.2em, 2em 2em 0 0, 0 3em 0 -1em,
+			-2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
+	}
+	37.5% {
+		box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em,
+			-2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+	}
+	50% {
+		box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em,
+			-2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+	}
+	62.5% {
+		box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0,
+			-2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
+	}
+	75% {
+		box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+			-2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
+	}
+	87.5% {
+		box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+			-2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+	}
+}
 
-  .loader {
-    color: blue;
-    font-size: 7px;
-    position: relative;
-    text-indent: -9999em;
-    transform: translateZ(0);
-    animation-delay: -0.16s;
-  }
-  .loader:before,
-  .loader:after {
-    content: '';
-    position: absolute;
-    top: 0;
-  }
-  .loader:before {
-    left: -3.5em;
-    animation-delay: -0.32s;
-  }
-  .loader:after {
-    left: 3.5em;
-  }
-  
-  @keyframes bblFadInOut {
-    0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
-    40% { box-shadow: 0 2.5em 0 0 }
-  }
+.loader,
+.loader:before,
+.loader:after {
+	border-radius: 50%;
+	width: 2.5em;
+	height: 2.5em;
+	animation-fill-mode: both;
+	animation: bblFadInOut 1.8s infinite ease-in-out;
+}
 
-  .is-hidden {
-    display: none;
-  }
-      
-  .cat-container {
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-    margin-top: 140px;
-  }
+.loader {
+	color: blue;
+	font-size: 7px;
+	position: relative;
+	text-indent: -9999em;
+	transform: translateZ(0);
+	animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+	content: '';
+	position: absolute;
+	top: 0;
+}
+.loader:before {
+	left: -3.5em;
+	animation-delay: -0.32s;
+}
+.loader:after {
+	left: 3.5em;
+}
 
-  .cat {
-    width: 500px;
-  }
+@keyframes bblFadInOut {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 2.5em 0 -1.3em;
+	}
+	40% {
+		box-shadow: 0 2.5em 0 0;
+	}
+}
 
-  .cat-name {
-    font-size: 38px;
-  }
+.is-hidden {
+	display: none;
+}
 
-  .cat-description {
-    font-size: 18px;
-  }
+.cat-container {
+	display: flex;
+	justify-content: center;
+	gap: 50px;
+	margin-top: 140px;
+}
 
-  .cat-temperament {
-    font-size: 20px;
-  }
+.cat {
+	width: 500px;
+}
 
-  .cat-origin {
-    font-size: 24px;
-  }
+.cat-name {
+	font-size: 38px;
+}
 
-  .cat-container img {
-    cursor: zoom-in;
-  }
+.cat-description {
+	font-size: 18px;
+}
 
-  .btn-refresh {
-    font-size: 16px;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+.cat-temperament {
+	font-size: 20px;
+}
 
-  }
-  .btn-refresh:hover {
-    background-color: aquamarine;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-  }
+.cat-origin {
+	font-size: 24px;
+}
+
+.cat-container img {
+	cursor: zoom-in;
+}
+
+.btn-refresh {
+	font-size: 16px;
+	border-radius: 6px;
+	cursor: pointer;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-refresh:hover {
+	background-color: aquamarine;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.custom__select {
+	box-sizing: border-box;
+	display: flex;
+	width: 188px;
+	padding: 14px 18px;
+	justify-content: center;
+	align-items: center;
+	gap: 40px;
+	border-radius: 15px;
+	border: 1px solid rgba(5, 5, 5, 0.2);
+	cursor: pointer;
+}
+
+.box__select {
+	position: relative;
+	margin-left: 500px;
+}
+
+.menu__box {
+	position: absolute;
+	top: calc(100% + 2px);
+	overflow: hidden;
+	width: 188px;
+	height: 188px;
+	border-radius: 14px;
+	transform-origin: top;
+	transform: scaleY(0%);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	box-sizing: border-box;
+	padding: 10px 5px;
+	background: #fff;
+}
+
+.menu__select {
+	box-sizing: border-box;
+	margin: 0;
+	height: 173px;
+	border-radius: 14px;
+	background: #fff;
+	box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	padding: 10px 20px;
+}
+
+.menu__select::before {
+	content: '';
+	position: absolute;
+	width: 188px;
+	height: 188px;
+	top: 0;
+	right: 0;
+	z-index: -1;
+	border-radius: 14px;
+	background: #fff;
+}
+
+.menu__item {
+	color: rgba(5, 5, 5, 0.3);
+	font-family: Inter;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 1.25; /* 125% */
+	cursor: pointer;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu__item:hover {
+	color: #050505;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.open {
+	transform: scaleY(100%);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu__select::-webkit-scrollbar {
+	width: 6px;
+	background: transparent;
+}
+
+.menu__select::-webkit-scrollbar-thumb {
+	width: 6px;
+	background-color: rgba(5, 5, 5, 0.1);
+	border-radius: 12px;
+}
+
+.buttons {
+	list-style: none;
+	display: flex;
+	gap: 20px;
+	width: 750px;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	background-color: transparent;
+}
+
+.buttons::-webkit-scrollbar,
+.buttons::-webkit-scrollbar-thumb,
+.buttons::-webkit-scrollbar-track {
+	color: transparent;
+	background-color: transparent;
+}
+
+.button {
+	box-sizing: border-box;
+	display: flex;
+	padding: 14px 18px;
+	justify-content: center;
+	align-items: center;
+	gap: 40px;
+	border-radius: 15px;
+	border: 1px solid rgba(5, 5, 5, 0.2);
+	cursor: pointer;
+	font-size: 16px;
+}
+
+.button:hover {
+	background-color: bisque;
+}
+
+/* .input_container{
+  text-align: center;
+  margin-top: 100px;
+}
+
+.input_search {
+  display: inline-block;
+  width: 550px;
+  padding: 20px 30px;
+  font-size: 24px;
+}
+
+.button_alarm {
+  width: 300px;
+  height: 100px;
+  cursor: pointer;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  box-shadow: 6px 5px 5px 0px rgba(0,0,0,0.75);
+  font-size: 24px;
+} */
