--- a/src/style.css
+++ b/src/style.css
@@ -329,7 +329,7 @@ body {
 	gap: 15px;
 	justify-content: center;
 	align-items: center;
-	margin-top: 100px;
+	margin-top: 50px;
 }
 
 .tui-page-btn {
@@ -349,4 +349,29 @@ body {
 
 .tui-is-selected {
 	background-color: blueviolet;
+}
+
+.tui-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+	flex-wrap: wrap;
+	list-style: none;
+	margin-top: 70px;
+}
+
+.box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 70px;
+	height: 50px;
+	margin: 15px;
+	padding: 20px;
+	border: 1px solid black;
+	border-radius: 15px;
+	font-size: 24px;
+	font-weight: 500;
+	list-style: none;
 }
